--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,4 +1,5 @@
 {
+  "bootstrap-sha": "7475de44ba0d18b3298171eb8b9e9202137ba604",
   "plugins": ["node-workspace"],
   "release-type": "node",
   "bump-minor-pre-major": true,
