--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,3 +16,21 @@ jobs:
         with:
           token: ${{ secrets.BOT_TOKEN }}
           command: manifest
+      - run: echo ${OUTPUTS}
+        env:
+          OUTPUTS: ${{ toJSON(steps.release.outputs) }}
+  npm-publish:
+    runs-on: ubuntu-latest
+    needs: release-please
+    if: ${{ needs.release-please.outputs.release_created }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+          registry-url: 'https://registry.npmjs.org'
+      - run: npm install
+      # - run: npm publish --access public
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.npm-token }}
