--- a/packages/package2/package.json
+++ b/packages/package2/package.json
@@ -1,6 +1,7 @@
 {
   "version": "0.2.1",
   "name": "@cheminfo/test-package2",
+  "main": "index.js",
   "dependencies": {
     "@cheminfo/test-package1": "^0.3.0"
   }
