--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -1,6 +1,7 @@
 name: Deploy build on lactame.com
 
 on:
+  workflow_dispatch:
   release:
     types: [published]
 
@@ -11,6 +12,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - run: echo "${{ github.event }}"
       - run: echo "${{ github.event.published }}"
       - uses: actions/checkout@v3
       - name: Get package name
