--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -12,7 +12,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "${{ github.event }}"
+      - run: echo "${{ toJSON(github.event) }}"
       - run: echo "${{ github.event.published }}"
       - uses: actions/checkout@v3
       - name: Get package name
