test on each push

--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -1,6 +1,9 @@
 name: Deploy build on lactame.com
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
   release:
     types: [published]
