--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -18,7 +18,7 @@ jobs:
       - run: echo "${{ toJSON(github.event.published) }}"
       - uses: actions/checkout@v3
       - name: Set current folder name
-        run: echo "CURRENT_FOLDER=packages/package1 | tr -d '"')" >> $GITHUB_ENV
+        run: echo "CURRENT_FOLDER=packages/package1" >> $GITHUB_ENV
       - name: Get package name
         run: echo "PACKAGE_NAME=$(jq .name ${{ env.CURRENT_FOLDER }}/package.json | tr -d '"')" >> $GITHUB_ENV
       - uses: actions/setup-node@v3
