--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -17,12 +17,13 @@ jobs:
     steps:
       - run: echo "${{ toJSON(github.event.published) }}"
       - uses: actions/checkout@v3
-      - name: Set current folder name
-        run: echo "CURRENT_FOLDER=packages/package1" >> $GITHUB_ENV
       - name: Get package name
-        run: echo "PACKAGE_NAME=$(jq .name ${{ env.CURRENT_FOLDER }}/package.json | tr -d '"')" >> $GITHUB_ENV
+        run: echo "PACKAGE_NAME=package1" >> $GITHUB_ENV
+      - name: Set current folder name
+        run: echo "CURRENT_FOLDER=packages/{{ env.PACKAGE_NAME }}" >> $GITHUB_ENV
       - name: Build name
         run: echo "BUILD_NAME=$(jq .${{ env.PACKAGE_NAME }} lactame.json | tr -d '"')" >> $GITHUB_ENV
+      - if: ${{ env.BUILD_NAME }}
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
@@ -35,4 +36,4 @@ jobs:
         with:
           token: ${{ secrets.LACTAME_TOKEN }}
           name: ${{ env.PACKAGE_NAME }}
-          folder: dist
+          folder: ${{ env.CURRENT_FOLDER }}/dist
