--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -12,18 +12,35 @@ env:
   NODE_VERSION: 16.x
 
 jobs:
-  deploy:
+  install:
     runs-on: ubuntu-latest
     steps:
       - run: echo "${{ toJSON(github.event.published) }}"
       - uses: actions/checkout@v3
+      - outputs:
+          - packageName: ${{ steps.step1.outputs.packageName }}
+          - buildName: ${{ steps.step2.outputs.buildname }}
       - name: Get package name
+        id: step1 
         run: echo "PACKAGE_NAME=package1" >> $GITHUB_ENV
-      - name: Set current folder name
-        run: echo "CURRENT_FOLDER=packages/{{ env.PACKAGE_NAME }}" >> $GITHUB_ENV
+        run: echo "::set-output name=packageName::${{ env.PACKAGE_NAME}}"
+      - name: Build name
+        id: step2 
+        run: echo "BUILD_NAME=$(jq .${{ env.PACKAGE_NAME }} lactame.json | tr -d '"')" >> $GITHUB_ENV
+        run: echo "::set-output name=buildName::${{ env.BUILD_NAME}}"
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: install
+    if: ${{ needs.install.outputs.buildName }}
+    steps:
+      - name: Get package name
+        run: echo "${{ needs.install.outputs.buildName }}"
+        run: echo "PACKAGE_NAME=package1" >> $GITHUB_ENV
       - name: Build name
         run: echo "BUILD_NAME=$(jq .${{ env.PACKAGE_NAME }} lactame.json | tr -d '"')" >> $GITHUB_ENV
-      - if: ${{ env.BUILD_NAME }}
+      - name: Set current folder name
+        run: echo "CURRENT_FOLDER=packages/{{ env.PACKAGE_NAME }}" >> $GITHUB_ENV
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
