--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -20,14 +20,15 @@ jobs:
     steps:
       - run: echo "${{ toJSON(github.event.published) }}"
       - uses: actions/checkout@v3
-
       - name: Get package name
-        id: step1 
         run: echo "PACKAGE_NAME=package1" >> $GITHUB_ENV
+      - name: Set jobs variable packageName
+        id: step1 
         run: echo "::set-output name=packageName::${{ env.PACKAGE_NAME}}"
       - name: Build name
-        id: step2 
         run: echo "BUILD_NAME=$(jq .${{ env.PACKAGE_NAME }} lactame.json | tr -d '"')" >> $GITHUB_ENV
+      - name: Set jobs variable buildName
+        id: step2 
         run: echo "::set-output name=buildName::${{ env.BUILD_NAME}}"
 
   publish:
