--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -23,12 +23,12 @@ jobs:
       - name: Get package name
         run: echo "PACKAGE_NAME=package1" >> $GITHUB_ENV
       - name: Set jobs variable packageName
-        id: step1 
+        id: step1
         run: echo "::set-output name=packageName::${{ env.PACKAGE_NAME}}"
       - name: Build name
         run: echo "BUILD_NAME=$(jq .${{ env.PACKAGE_NAME }} lactame.json | tr -d '"')" >> $GITHUB_ENV
       - name: Set jobs variable buildName
-        id: step2 
+        id: step2
         run: echo "::set-output name=buildName::${{ env.BUILD_NAME}}"
 
   publish:
@@ -36,8 +36,9 @@ jobs:
     needs: install
     if: ${{ needs.install.outputs.buildName }}
     steps:
-      - name: Get package name
+      - name: Echo package name
         run: echo "${{ needs.install.outputs.buildName }}"
+      - name: Get package name
         run: echo "PACKAGE_NAME=${{ needs.install.outputs.packageName }}" >> $GITHUB_ENV
       - name: Build name
         run: echo "BUILD_NAME=$(jq .${{ env.PACKAGE_NAME }} lactame.json | tr -d '"')" >> $GITHUB_ENV
