--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -1,10 +1,10 @@
 name: Deploy build on lactame.com
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+  #  push:
+  #    branches:
+  #      - main
+  #  workflow_dispatch:
   release:
     types: [published]
 
