--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           token: ${{ secrets.BOT_TOKEN }}
           command: manifest
+      - name: Show output
+        run: echo "${{ toJSON( steps.release.outputs ) }}"
   npm-publish:
     needs: release-please
     if: ${{ needs.release-please.outputs.releases_created }}
@@ -30,7 +32,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16.x
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
       - run: npm install
       - name: Publish ${{ matrix.package }}
         run: npm publish --access public -w ${{ matrix.package }}
