--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -18,6 +18,7 @@ jobs:
       packageName: ${{ steps.step1.outputs.packageName }}
       buildName: ${{ steps.step2.outputs.buildname }}
     steps:
+      - run: echo "${{ toJSON(github.event.release) }}"
       - run: echo "${{ toJSON(github.event.published) }}"
       - uses: actions/checkout@v3
       - name: Get package name
