--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -18,13 +18,13 @@ jobs:
       packageName: ${{ steps.step1.outputs.packageName }}
       buildName: ${{ steps.step2.outputs.buildname }}
     steps:
-      - name: event.release
-        run: echo "${{ toJSON(github.event.release) }}"
-      - name: event.release.tagName
-        run: echo "${{ toJSON(github.event.release.tagName) }}"
       - uses: actions/checkout@v3
+      - name: event.release
+        run: echo "${{toJSON(github.event.release)}}"
+      - name: event.release.tagName
+        run: echo "${{github.event.release.tagName}}"
       - name: Get package name
-        run: echo "PACKAGE_NAME=`echo "${{ toJSON(github.event.release.tagName) }}" | sed -r "s/-[^-]*$//"`" >> $GITHUB_ENV
+        run: echo "PACKAGE_NAME=`echo "${{github.event.release.tagName}}" | sed -r "s/-[^-]*$//"`" >> $GITHUB_ENV
       - name: Set jobs variable packageName
         id: step1
         run: echo "::set-output name=packageName::${{ env.PACKAGE_NAME}}"
