--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,1 +1,1 @@
-{"packages/package1":"0.4.8","packages/package2":"0.2.11"}
+{ "packages/test-package1": "0.4.8", "packages/test-package2": "0.2.11" }
