--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build project
-        run: npx cheminfo-build --cwd ${{ env.CURRENT_FOLDER }} --entry index.js --root ${{ env.BUILD_NAME }}
+        run: npx cheminfo-build --cwd ${{ env.CURRENT_FOLDER }} --out-name ${{ env.PACKAGE_NAME }} --entry index.js --root ${{ env.BUILD_NAME }}
       - name: Deploy to lactame.com
         uses: zakodium/lactame-action@v1
         with:
