--- a/.github/workflows/lactame.yml
+++ b/.github/workflows/lactame.yml
@@ -17,6 +17,7 @@ jobs:
     outputs:
       packageName: ${{ steps.step1.outputs.packageName }}
       buildName: ${{ steps.step2.outputs.buildName }}
+      packageVersion: ${{ steps.step3.outputs.packageVersion }}
     steps:
       - uses: actions/checkout@v3
       - name: event.release.tagName
@@ -26,11 +27,16 @@ jobs:
       - name: Set jobs variable packageName
         id: step1
         run: echo "::set-output name=packageName::${{ env.PACKAGE_NAME}}"
-      - name: Build name
+      - name: Get build name
         run: echo "BUILD_NAME=$(jq ".\"${{ env.PACKAGE_NAME }}\" // empty" lactame.json | tr -d '"')" >> $GITHUB_ENV
       - name: Set jobs variable buildName
         id: step2
         run: echo "::set-output name=buildName::${{ env.BUILD_NAME}}"
+      - name: Get version
+        run: echo "PACKAGE_VERSION=`echo "${{github.event.release.tag_name}}" | sed -r "s/^.*-v//"`" >> $GITHUB_ENV
+      - name: Set jobs variable packageVesion
+        id: step3
+        run: echo "::set-output name=packageVersion::${{ env.PACKAGE_VERSION}}"
 
   publish:
     runs-on: ubuntu-latest
@@ -42,8 +48,10 @@ jobs:
         run: echo "${{ needs.install.outputs.buildName }}"
       - name: Get package name
         run: echo "PACKAGE_NAME=${{ needs.install.outputs.packageName }}" >> $GITHUB_ENV
-      - name: Build name
-        run: echo "BUILD_NAME=${{ needs.install.outputs.buildname }}" >> $GITHUB_ENV
+      - name: Get build name
+        run: echo "BUILD_NAME=${{ needs.install.outputs.buildName }}" >> $GITHUB_ENV
+      - name: Get package version
+        run: echo "PACKAGE_VERSION=${{ needs.install.outputs.packageVersion }}" >> $GITHUB_ENV
       - name: Set current folder name
         run: echo "CURRENT_FOLDER=packages/${{ env.PACKAGE_NAME }}" >> $GITHUB_ENV
       - uses: actions/setup-node@v3
@@ -58,4 +66,5 @@ jobs:
         with:
           token: ${{ secrets.LACTAME_TOKEN }}
           name: ${{ env.PACKAGE_NAME }}
+          version: ${{ env.PACKAGE_VERSION }}
           folder: ${{ env.CURRENT_FOLDER }}/dist
